--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
-    "emailjs-com": "^3.2.0"
-  },
-  "devDependencies": {
+    "emailjs-com": "^3.2.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
     "vite": "^5.1.6"
-  }
+  },
+  "devDependencies": {}
 }
