--- a/package.json
+++ b/package.json
@@ -3,27 +3,32 @@
   "version": "1.0.0",
   "description": "",
   "main": "vite.config.js",
+  "homepage": "https://beabravo.github.io/react-portfolio",
   "scripts": {
     "dev": "vite",
     "start": "vite",
     "build": "vite build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.0.0",
     "bootstrap": "^5.3.2",
+    "emailjs-com": "^3.2.0",
     "node": "^21.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
-    "emailjs-com": "^3.2.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^4.0.0",
     "vite": "^5.1.6"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
+  }
 }
